changes to new template, fixed navBar z-index

--- a/app/assets/stylesheets/_nav_bar.sass
+++ b/app/assets/stylesheets/_nav_bar.sass
@@ -5,6 +5,7 @@
   position: fixed
   min-width: 100%
   top: 0
+  z-index: 9999
 
 .logo
   background-color: white
